# ga1axy

./: brain_dump.md  potential_solution.md
render/: .gitignore  Cargo.toml  rendering_how.md  test.py
render/shaders/: compile-shaders.ps1  compile-shaders.sh  unlit.frag  unlit.frag.spv  unlit.vert  unlit.vert.spv
render/src/: demo_inputs.rs  engine.rs  lib.rs  main.rs  ppm.rs  trainer.rs  visualizer.rs
render/src/shaders/: unlit.frag  unlit.frag.spv  unlit.vert  unlit.vert.spv
