[package]
name = "ga1axy_render"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
nalgebra = "0.26"
bytemuck = "1.5"
#watertender = { git = "https://github.com/Masterchef365/watertender.git", branch = "trivial_win" }
watertender = { path = "../../watertender" }
erupt = "0.18"
rand = "0.8"
