[package]
name = "ga1axy_render"
version = "0.1.0"
edition = "2018"

[lib]
name = "ga1axy"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
nalgebra = "0.26"
bytemuck = "1.5"
watertender = { git = "https://github.com/Masterchef365/watertender.git", branch = "main" }
erupt = "0.18"
rand = "0.8"
numpy = "0.14"
pyo3 = "0.14"
